Fixed now annoying scrollbars don't appear

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -46,6 +46,10 @@ a:hover {
   overflow: scroll;
 }
 
+#progressContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .gridDisplay {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
